launchpad-buildd (118) UNRELEASED; urgency=low

  [ William Grant ]
  * Fix fallback to PACKAGEFAIL of unknown sbuild DEPFAIL conditions
    (LP: #1235038).

  [ Colin Watson ]
  * Fail the builder immediately if $HOME/.sbuildrc is corrupt
    (LP: #1235287).

 -- William Grant <william.grant@canonical.com>  Fri, 04 Oct 2013 11:03:51 +1000

launchpad-buildd (117) hardy; urgency=low

  * Fix dep-wait detection when recipes fail to install build-dependencies
    (LP: #1234621).
  * Remove *.pyc files from source tree on clean.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Oct 2013 12:43:27 +0100

launchpad-buildd (116) hardy; urgency=low

  [ Colin Watson ]
  * Remove obsolete BuilderStatus.ABORTED.
  * Remove obsolete BuildDSlave.fetchFile method, unused since October 2005.
  * If the expected .changes file doesn't exist, consider this as a package
    build failure rather than crashing (LP: #993642).
  * Don't attempt to read entire files into memory at once when storing them
    in the file cache.
  * Rearrange build log searching to avoid reading the entire build log into
    memory at once (LP: #1227086).

  [ Adam Conrad ]
  * Tidy up log formatting of the "Already reaped..." message. 

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 27 Sep 2013 13:08:59 +0100

launchpad-buildd (115) hardy; urgency=low

  [ Adam Conrad ]
  * Short the readlink call in scan-for-process with a true to avoid
    prematurely exiting the process scan when tripping over zombies.
  * Write to temporary cache files and then rename after validation
    to avoid the cache containing broken aborted files (LP: #471076)
  * Skip nonexistent directories in cron cleanup code to avoid vomit
    in cron log on fresh installs that lack those dirs (LP: #559115)
  * Build buildd-slave-example.conf from template-buildd-slave.conf
    using buildd-genconfig at package build time so it's not stale.
  * Add a build-dependency on python to make buildd-genconfig work.