@@ -7,6 +7,8 @@ launchpad-buildd (118) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Fail the builder immediately if $HOME/.sbuildrc is corrupt
     (LP: #1235287).
+  * Add a status_dict XML-RPC method for better extensibility, including
+    reporting the python-lpbuildd version (LP: #680514).
 
  -- William Grant <william.grant@canonical.com>  Fri, 04 Oct 2013 11:03:51 +1000
 
